[gd_scene format=3 uid="uid://cb7vacu1bxbbr"]

[ext_resource type="Script" uid="uid://c7ray71gce45c" path="res://scripts/emotion_mode.gd" id="1_emotion"]
[ext_resource type="FontFile" uid="uid://c2e7duja1spvc" path="res://assets/fonts/AmaticSC-Bold.ttf" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lives"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.05)
shadow_size = 10
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_score"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.05)
shadow_size = 10
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_normal"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.05)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_pressed"]
bg_color = Color(0.9, 0.9, 0.9, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_hover"]
bg_color = Color(0.85, 0.85, 0.85, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.08)
shadow_size = 8
shadow_offset = Vector2(0, 6)

[sub_resource type="FontVariation" id="FontVariation_bold"]
base_font = ExtResource("3_font")
variation_embolden = 0.8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 40
shadow_offset = Vector2(0, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_primary"]
bg_color = Color(0.2, 0.6, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.2, 0.6, 1, 0.3)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_secondary"]
bg_color = Color(0.95, 0.95, 0.95, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_secondary_hover"]
bg_color = Color(1, 0.4, 0.4, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="EmotionMode" type="Control" unique_id=1973544705]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emotion")

[node name="Background" type="ColorRect" parent="." unique_id=1613178795]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.95, 0.96, 0.97, 1)

[node name="SafeArea" type="MarginContainer" parent="." unique_id=1201691458]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBox" type="VBoxContainer" parent="SafeArea" unique_id=435175078]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="SafeArea/VBox" unique_id=1546184837]
layout_mode = 2

[node name="LivesPanel" type="PanelContainer" parent="SafeArea/VBox/Header" unique_id=1088736374]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lives")

[node name="Container" type="MarginContainer" parent="SafeArea/VBox/Header/LivesPanel" unique_id=1290689801]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="LivesLabel" type="RichTextLabel" parent="SafeArea/VBox/Header/LivesPanel/Container" unique_id=1403221452]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]❤️❤️❤️[/center]"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="Spacer" type="Control" parent="SafeArea/VBox/Header" unique_id=1094708778]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScorePanel" type="PanelContainer" parent="SafeArea/VBox/Header" unique_id=1425340081]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_score")

[node name="ScoreLabel" type="Label" parent="SafeArea/VBox/Header/ScorePanel" unique_id=1101511297]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="SafeArea/VBox/Header" unique_id=521621630]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="PauseButton" type="Button" parent="SafeArea/VBox/Header" unique_id=123710793]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pause_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_pause_hover")
text = "II"

[node name="DisplayContainer" type="CenterContainer" parent="SafeArea/VBox" unique_id=1118163412]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SafeArea/VBox/DisplayContainer" unique_id=1182702443]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="EmotionLabel" type="Label" parent="SafeArea/VBox/DisplayContainer/VBoxContainer" unique_id=1537580195]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 80
text = "Warna apa yang terasa MARAH?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsGrid" type="GridContainer" parent="SafeArea/VBox/DisplayContainer/VBoxContainer" unique_id=1721655076]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2

[node name="FeedbackLabel" type="Label" parent="SafeArea/VBox/DisplayContainer/VBoxContainer" unique_id=1298456367]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1

[node name="ExplanationLabel" type="Label" parent="SafeArea/VBox/DisplayContainer/VBoxContainer" unique_id=2123132875]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
autowrap_mode = 3

[node name="GameOverPanel" type="Panel" parent="." unique_id=376727150]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="GameOverPanel" unique_id=1899749053]
layout_mode = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/Margin" unique_id=138773987]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PauseOverlay" type="ColorRect" parent="." unique_id=51635786]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="CenterContainer" type="CenterContainer" parent="PauseOverlay" unique_id=1307158982]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card" type="PanelContainer" parent="PauseOverlay/CenterContainer" unique_id=1796639720]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="PauseOverlay/CenterContainer/Card" unique_id=197798977]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="PauseOverlay/CenterContainer/Card/Margin" unique_id=1235315306]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="PauseOverlay/CenterContainer/Card/Margin/VBox" unique_id=1535128626]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 72
text = "JEDA"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseOverlay/CenterContainer/Card/Margin/VBox" unique_id=271861735]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_primary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_primary")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_primary")
text = "LANJUT"

[node name="MenuButton" type="Button" parent="PauseOverlay/CenterContainer/Card/Margin/VBox" unique_id=1971552937]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_secondary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_secondary")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_secondary_hover")
text = "MENU UTAMA"

[connection signal="pressed" from="SafeArea/VBox/Header/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseOverlay/CenterContainer/Card/Margin/VBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseOverlay/CenterContainer/Card/Margin/VBox/MenuButton" to="." method="_on_main_menu_button_pressed"]
